--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "antd": "^3.13.5",
+    "axios": "^0.18.0",
     "bignumber.js": "^8.0.2",
     "bitsharesjs": "^1.8.3",
     "react": "^16.8.2",
